# Bridging-Coursework

./: .gitignore  Makefile  README.md  fixtures.json  pyproject.toml  requirements.txt
.github/workflows/: test.yaml
blog/: models.py  serializers.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
cv/: models.py  serializers.py  settings.py  tests.py  urls.py  views.py
cv/api/: views.py
cv/migrations/: 0001_initial.py  0002_add_types.py  0002_auto_20200825_2201.py  0002_auto_20200826_2221.py  0003_add_types.py  0003_cvitem_icon.py  0004_auto_20200826_2246.py  0004_cvitem_link.py
frontend/: .babelrc  .gitignore  package-lock.json  package.json  rollup.config.js  tests.py  urls.py  webpack.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.scss  App.svelte  Hero.svelte  Menu.svelte  Panel.svelte  index.js
frontend/src/components/: Breadcrumb.js  CRUD.js  CodeBlock.js  Dropdown.js  Footer.js  Hero.js  Login.js  Nav.js  Notification.js  Post.js  PostListing.js  PostModal.js  PostThumb.js  Social.js
frontend/src/components/cv/: Item.js  ItemModal.js
frontend/src/components/post/: PostModal.js  PostThumb.js
frontend/src/pages/: Admin.js  Blog.js  CV.js  Index.js  Post.js
frontend/src/pages/admin/: ManageBlog.js  ManageCV.js
frontend/src/utils/: fetcher.js
frontend/static/frontend/: main.js  manifest.json
frontend/templates/frontend/: index.html
frontend/tests/: __init__.py  base.py  blog.py  cv.py  index.py  login.py
mysite/: settings.py  urls.py
updater/: views.py
